2005-10-08  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cond.c: Fix up <switch> conditional comparisons
	* rsvg-base.c: Make XML entities work, thus passing a few more conformance tests. Needs libxml2 2.6.22 or better.
	Disable entities otherwise.
	
2005-10-08 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-cairo-clip.c/.h: new files. Added clipping in cairo backend.
	* rsvg-cairo-draw.c: stopped paths from being drawn and not stroked or filled (root of the "grey box" problem)

	
2005-10-08 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-art-paint-server.c: stopped strangely transformed gradients from getting flipped.

2005-10-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Hopefully get rid of "static" when rendering using the cairo backend
	
2005-10-07 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-draw.c: made opacity work
	* test-display.c: changed set_default_dpi_x_y to set_default_dpi
	* rsvg-cairo-draw.c: put image in the right spot
	
2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
	* test-display.c: Populate save dialogs with the SVG's name. Bug #318010.
	* configure.in: Ditto
	* rsvg-structure.c: Related to bug #318025, don't set has_width or has_height unless they are > 0.
	* rsvg.c: Bug #168567, mega hack to make multiImage sort-of work.
	
2005-10-04 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* most-cairo-related-places: added lots of stuff to do with gradients, objectBoundBox positioning and spreading. Made currentColor work with cairo. Made courners look great in cairo but crap in libart... I just can't win.

2005-10-04  Dom Lachowicz <cinamod@hotmail.com>
	
	* rsvg-shapes.c: Fix problems in non-C locales. Bug #317615
	
2005-10-03 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c, rsvg-art-paint-server.c: Fix bug #317871

2005-10-03 Caleb Moore <c.moore@student.unsw.edu.au>
